2016-06-14 Franz Holzinger <franz@ttproducts.de>
	* bugfix for PHP 7.x: The method init of tx_agency_lang cannot overload init of tx_div2007_alpha_language_base. init1 must be used instead.

2015-12-07 Franz Holzinger <franz@ttproducts.de>
	* bug fix: multiple checkbox looses the first zero value 0. parseValues must take care of a zero 0.
	* bug fix: PHP 5.4 fatal error. Can't use method return value in write context with empty around getFeUserData
	* feature: Show an error message if the template file is not found.
	* fix bug #60509
	* fix bug #59450: Missing SQL definition for telephone. Extend the table fields of fe_users.

2015-10-17 Franz Holzinger <franz@ttproducts.de>
	* bug fix: Build a loop over all login methods until salted passwords are supported.
	* bug fix: do not skip the preview before a deletion

2015-09-11 Franz Holzinger <franz@ttproducts.de>
	* bug fix: The modified dataArray must be stored internally.
	* bug fix: The saved checkbox value for the acknowledged terms did not get stored.

2015-09-10 Franz Holzinger <franz@ttproducts.de>
	* bug fix: deletion of image. The Javascript onsubmit function of the deletion image input field loses the field name called submit_delete. Write a new Javascript function to have also fewer code.
	* bug fix: show TCA type check correctly in the preview and save it as a bit field integer

2015-08-15 Franz Holzinger <franz@ttproducts.de>
	* bug fix: The password command after INVITE must not modify any of the other fields. There is no uncheck of a checkbox in this case.
	* bug fix: the field list must be determined before modifyRow

2015-07-17 Franz Holzinger <franz@ttproducts.de>
	* bug fix: forgotten parameter 2 for method addPasswordTransmissionMarkers
	* change: set uploadFolder to fileadmin/user_uploads for TYPO3 6.2

2015-07-08 Franz Holzinger <franz@ttproducts.de>
	* bug fix: select box id must use the field name as a part of it
	* bug fix: do not clear the session password for autologin on create