@@ -37,7 +37,7 @@ $EM_CONF[$_EXTKEY] = array(
 		'depends' => array(
 			'php' => '5.2.0-7.99.99',
 			'typo3' => '4.5.0-6.2.99',
-			'div2007' => '1.3.1-0.0.0',
+			'div2007' => '1.6.9-0.0.0',
 		),
 		'conflicts' => array(
 			'sr_feuser_register' => '',
@@ -54,4 +54,3 @@ $EM_CONF[$_EXTKEY] = array(
 	'conflicts' => 'sr_feuser_register',
 );
 
-?>
