@@ -159,4 +159,3 @@ if (TYPO3_MODE == 'FE') {
 	}
 }
 
-?>
