@@ -30,8 +30,6 @@ if (t3lib_extMgm::isLoaded('sr_freecap')) {
  *
  * sr_freecap hook functions
  *
- * $Id$
- *
  * @author	Stanislas Rolland <typo3(arobas)sjbr.ca>
  *
  * @package TYPO3
@@ -130,4 +128,3 @@ class tx_agency_freecap {
 if (defined('TYPO3_MODE') && isset($GLOBALS['TYPO3_CONF_VARS'][TYPO3_MODE]['XCLASS']['ext/' . AGENCY_EXT . '/hooks/freecap/class.tx_agency_freecap.php'])) {
 	include_once($GLOBALS['TYPO3_CONF_VARS'][TYPO3_MODE]['XCLASS']['ext/' . AGENCY_EXT . '/hooks/freecap/class.tx_agency_freecap.php']);
 }
-?>
